# cloudflared-ingress-rs

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  Dockerfile  README.md  renovate.json  renovate.json5  sonar-project.properties
.github/hooks/: hooks.json
.github/hooks/postToolUse/: README.md  linters.json  main.test.mjs
.github/scripts/: cleanup-ghcr.mjs  cleanup-ghcr.test.mjs  semver-release.mjs  semver-release.test.mjs
.github/skills/containerized-rust-ops/: SKILL.md
.github/skills/containerized-rust-ops/references/: runtime-quirks.md
.github/skills/containerized-rust-ops/scripts/: install-cargo-llvm-cov.sh  install-sccache.sh  k8s-rust.sh  podman-rust.sh
.github/workflows/: ci-config.yaml  copilot-hooks.yaml  docker-image.yaml  helm-chart.yaml  rust-ci.yaml  semver-label.yaml  semver-release.yaml  sonarqube-cloud.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  crd.yaml  deployment.yaml  ingressclass.yaml  serviceaccount.yaml
src/: cli.rs  error.rs  main.rs
src/controllers/: cloudflared.rs  ingress.rs  mod.rs  test_support.rs
src/controllers/cloudflared/: cf_api.rs  cfd_config.rs  customresource.rs  kube_api.rs
yaml/: crd.yaml  ingressclass.yaml
