[package]
name = "cloudflared-ingress-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
cloudflare = { version = "0.14.0", features = ["rustls-tls"], default-features = false }
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["derive", "runtime", "unstable-runtime"] }
rand = "0.9.2"
schemars = { version = "1.1.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
snafu = { version = "0.8.9", features = ["backtrace", "rust_1_81"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal", "macros"] }
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.21", features = ["env-filter"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.8"
mockito = "1.7.0"
