[package]
name = "cloudflared-ingress-rs"
version = "0.2.0-dev"
edition = "2024"
rust-version = "1.94"

[dependencies]
actix-web = "4.13.0"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
cloudflare = { version = "0.14.0", features = ["rustls-tls"], default-features = false }
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["derive", "runtime", "unstable-runtime"] }
rand = "0.10.0"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
snafu = { version = "0.9.0", features = ["backtrace"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.10"
mockito = "1.7.2"
